# wassden-mcp

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  LICENSE  Makefile  PR_DESCRIPTION.md  PR_DESCRIPTION_SHORT.md  README.md  investigate_similar_cases.md  pyproject.toml
.github/workflows/: ci-mcp.yml  ci.yml  debug-mock.yml  validate-examples.yml
benchmarks/: README.md  __init__.py  results.json  run_all.py
docs/: ROADMAP.md  ast-validation.md  cli.md  development.md  dogfooding-findings.md  experiment-framework.md  performance.md  quickstart.md  spec-format.md  tools.md  traceability.md  validation-framework-impl.md  validation.md
docs/en/: cli.md  spec-format.md  traceability.md
docs/en/spec-example/: design.md  requirements.md  tasks.md
docs/en/validation/: ears.md  tasks.md  traceability.md
docs/ja/spec-example/: design.md  requirements.md  tasks.md
docs/ja/validation/: ears.md
docs/validation/: tasks.md  traceability.md
scripts/: verify-core-cli.sh  verify-dev-cli.sh
tests/: __init__.py  conftest.py  debug_mock_investigation.py  test_dev_gate.py
tests/cli/: test_cli_commands.py  test_cli_detailed.py
tests/e2e/: test_experiment_e2e.py  test_full_workflow.py  test_mcp_server.py
tests/integration/: test_experiment_integration.py  test_handlers.py  test_handlers_detailed.py  test_spec_examples.py
tests/unit/: test_analyze_changes_detailed.py  test_benchmark.py  test_comparative_analyzer.py  test_ears_analyzer.py  test_experiment_api.py  test_experiment_cli.py  test_experiment_cli_async.py  test_experiment_cli_concurrent.py  test_experiment_manager.py  test_fs_utils.py  test_fs_utils_detailed.py  test_generate_review_prompt.py  test_i18n.py  test_language_detector_analyzer.py  test_output_formatter.py  test_performance_profiler.py  test_prompts.py  test_prompts_detailed.py  test_statistics_engine.py  test_traceability.py  test_validate.py  test_validate_comprehensive.py  test_validate_detailed.py  test_validate_ears.py  test_validate_traceability.py
tests/unit/test_spec_ast/: __init__.py  test_blocks.py  test_document_styles.py  test_format_rules.py  test_id_extractor.py  test_parser.py  test_parser_phase2.py  test_section_patterns.py  test_structure_rules.py  test_validation_compat.py  test_validation_engine.py  test_validation_rules.py
wassden/: __init__.py  cli.py  language_types.py  server.py  types.py
wassden/clis/: core.py  experiment.py  utils.py
wassden/handlers/: __init__.py  code_analysis.py  completeness.py  design.py  requirements.py  tasks.py  traceability.py
wassden/i18n/: __init__.py  core.py
wassden/i18n/locales/en/: code_prompts.json  completeness.json  design_prompts.json  prompts.json  requirements.json  tasks_prompts.json  traceability.json  validation.json  validation_errors.json
wassden/i18n/locales/ja/: code_prompts.json  completeness.json  design_prompts.json  prompts.json  requirements.json  tasks_prompts.json  traceability.json  validation.json  validation_errors.json
wassden/lib/: __init__.py  comparative_analyzer.py  constants.py  ears_analyzer.py  experiment.py  experiment_api.py  experiment_manager.py  fs_utils.py  language_detection.py  language_detector_analyzer.py  output_formatter.py  performance_profiler.py  prompts.py  statistics_engine.py  traceability.py  validate.py  validate_ears.py  validation_common.py
wassden/lib/spec_ast/: __init__.py  blocks.py  consistency_rules.py  document_styles.py  format_rules.py  id_extractor.py  parser.py  section_patterns.py  structure_rules.py  test_scenario_rules.py  traceability_rules.py  validation_compat.py  validation_engine.py  validation_rules.py
wassden/tools/: definitions.py
wassden/utils/: __init__.py  benchmark.py  dev_gate.py
